@@ -1,0 +1,10 @@
+#include <stdio.h>
+
+int foo(){
+    printf("I am foo\n");
+}
+
+int main(){
+    foo();
+    return 0;
+}
